--- a/style.css
+++ b/style.css
@@ -36,3 +36,15 @@
 .custom-card-info-01 {
   padding: 0 25px !important;
 }
+
+/* custom footer */
+.custom-footer{
+  padding-top: 80px;
+  padding-bottom: 80px;
+  line-height: 140%;
+}
+
+.custom-icon-style{
+  width: 37px !important;
+  height: 37px !important;
+}
